Fixed z-index for datepicker in modal

--- a/app/assets/stylesheets/primero/forms_fields.scss
+++ b/app/assets/stylesheets/primero/forms_fields.scss
@@ -687,6 +687,7 @@ fieldset {
   -webkit-box-shadow: 0 0 4px 1px rgba(0,0,0,.2);
   box-shadow: 0 0 4px 1px rgba(0,0,0,.2);
   border: 1px solid $stroke_green_color !important;
+  z-index: 9999 !important;
 }
 
 select.ui-datepicker-month {
